--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3006/sql_library
 spring.datasource.username=peter
 spring.datasource.password=peter
+
+#spring.jpa.hibernate.ddl-auto=create
+logging.level.root=warn
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
