--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3006/sql_library
-spring.datasource.username=peter
-spring.datasource.password=peter
+spring.datasource.url=jdbc:mysql://localhost:3006/library_directory
+spring.datasource.username=librarian
+spring.datasource.password=librarian
 
-#spring.jpa.hibernate.ddl-auto=create
 logging.level.root=warn
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
